@@ -1,5 +1,9 @@
 2008-08-27  Jonathan Pryor  <jpryor@novell.com>
 
+	* mktuples: Disable CLS Compliance checking on the _N members.
+
+2008-08-27  Jonathan Pryor  <jpryor@novell.com>
+
 	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add
 	  Mono.Rocks/StreamConverter.cs to the build.
 	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
